--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+html, body {
+  overflow-x: hidden;/* Prevent horizontal scrolling */
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.scrollable-container {
+  font-family: Arial, sans-serif;
+  background-color: #000000;
   color: white;
+  padding: 20px;
+  min-height: 100vh;
+  width: 100%;
+  overflow: auto; /* Enable scrolling when needed */
+  position: relative;
+}
+.scrollable-container::-webkit-scrollbar {
+  width: 0px; /* Width of the scrollbar */
+  background: transparent; /* Background color of the scrollbar */
+}
+/* Hide scrollbar but allow scrolling */
+
+h1 {
+  color: #ffffff;
 }
 
-.App-link {
-  color: #61dafb;
+.mnemonic-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mnemonic-box {
+  background-color: black;
+  color: white;
+  border: 0.1px solid #ffffff;
+  padding: 10px 15px;
+  border-radius: 5px;
+  border-color: white;
+  font-size: 1em;
+  text-align: center;
+  flex: 0 1 auto; /* Allow the boxes to grow and shrink */
 }
+/* Prevent horizontal scrolling */
